--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/kriasoft/react-starter-kit#readme",
   "devDependencies": {
     "events": "^1.1.0",
+    "express": "^4.13.3",
     "flux": "^2.1.1",
+    "passport": "^0.3.0",
     "react": "^0.14.0",
     "react-addons-linked-state-mixin": "^0.14.0"
   },
