Add jquery into package.json and fix EventEmitter extension of ChannelStore, Add IChannelStore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,33 @@
     ],
     "exclude": [],
     "files": [
+        "Pickle.Web/app/Actions/Action.ts",
+        "Pickle.Web/app/Channels/Channel.ts",
+        "Pickle.Web/app/Channels/ChannelActivationAction.ts",
+        "Pickle.Web/app/Channels/ChannelsLoadedEvent.ts",
+        "Pickle.Web/app/Channels/ChannelStore.ts",
+        "Pickle.Web/app/Channels/NewChannelAction.ts",
+        "Pickle.Web/app/Channels/NewMessageAction.ts",
+        "Pickle.Web/app/Dispatcher/Dispatcher.ts",
+        "Pickle.Web/node_modules/flux/node_modules/immutable/contrib/cursor/__tests__/Cursor.ts",
+        "Pickle.Web/node_modules/flux/node_modules/immutable/contrib/cursor/index.d.ts",
+        "Pickle.Web/node_modules/flux/node_modules/immutable/dist/immutable.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.core.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.core.es6.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.dom.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.es6.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.scriptHost.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/lib.webworker.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/typescript.d.ts",
+        "Pickle.Web/node_modules/typescript/lib/typescriptServices.d.ts",
+        "Pickle.Web/typings/bluebird/bluebird.d.ts",
+        "Pickle.Web/typings/flux/flux.d.ts",
+        "Pickle.Web/typings/jquery/jquery.d.ts",
+        "Pickle.Web/typings/node/node.d.ts",
+        "Pickle.Web/typings/react/react-global.d.ts",
+        "Pickle.Web/typings/react/react.d.ts",
+        "Pickle.Web/typings/tsd.d.ts",
         "src/Actions/Action.ts",
         "src/Channels/Channel.ts",
         "src/Channels/ChannelActivationAction.ts",
@@ -26,6 +53,10 @@
         "typings/react/react-global.d.ts",
         "typings/react/react.d.ts",
         "typings/tsd.d.ts",
+        "Pickle.Web/app/app.tsx",
+        "Pickle.Web/app/ChannelPanel/ChannelListItem.tsx",
+        "Pickle.Web/app/ChannelPanel/ChannelPanel.tsx",
+        "Pickle.Web/app/ChatPanel/ChatPanel.tsx",
         "src/app.tsx",
         "src/ChannelPanel/ChannelListItem.tsx",
         "src/ChannelPanel/ChannelPanel.tsx",
