--- a/Pickle.Web/package.json
+++ b/Pickle.Web/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "events": "^1.1.0",
     "flux": "^2.1.1",
+    "jquery": "^2.1.4",
     "karma": "^0.13.15",
     "karma-browserify": "^4.4.0",
     "karma-chai": "^0.1.0",
