--- a/Pickle.Web/package.json
+++ b/Pickle.Web/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start test/karma.conf.js"
+    "test": "karma start app/test/karma.conf.js"
   },
   "author": "",
   "license": "ISC",
