--- a/Pickle.Web/package.json
+++ b/Pickle.Web/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "events": "^1.1.0",
     "flux": "^2.1.1",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
     "karma": "^0.13.15",
     "karma-browserify": "^4.4.0",
@@ -26,6 +27,7 @@
     "phantomjs": "^1.9.18",
     "react": "^0.14.0",
     "react-addons-linked-state-mixin": "^0.14.0",
+    "signalrjs": "^0.2.2",
     "ts-loader": "^0.6.0",
     "tslint": "^2.5.1",
     "tslint-loader": "^1.0.2",
