--- a/Pickle.Web/project.json
+++ b/Pickle.Web/project.json
@@ -17,7 +17,8 @@
     "Microsoft.AspNet.Authentication.OpenIdConnect": "1.0.0-beta5",
     "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta5",
     "Autofac": "4.0.0-beta5-90",
-    "Autofac.Framework.DependencyInjection": "4.0.0-beta5-90"
+    "Autofac.Framework.DependencyInjection": "4.0.0-beta5-90",
+    "Pickle.Data": "1.0.0-*"
   },
 
   "commands": {
