--- a/Pickle.Web/package.json
+++ b/Pickle.Web/package.json
@@ -33,5 +33,8 @@
     "tslint-loader": "^1.0.2",
     "typescript": "^1.6.2",
     "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "urijs": "^1.16.1"
   }
 }
