--- a/Pickle.Web/package.json
+++ b/Pickle.Web/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/kriasoft/react-starter-kit#readme",
   "devDependencies": {
+    "css-loader": "^0.22.0",
     "events": "^1.1.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "flux": "^2.1.1",
     "imports-loader": "^0.6.5",
     "jquery": "^2.1.4",
@@ -45,6 +47,7 @@
     "react-addons-linked-state-mixin": "^0.14.0",
     "signalrjs": "^0.2.2",
     "sinon": "^1.17.2",
+    "style-loader": "^0.13.0",
     "ts-loader": "^0.6.0",
     "tslint": "^2.5.1",
     "tslint-loader": "^1.0.2",
@@ -53,6 +56,7 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
+    "classnames": "^2.2.0",
     "urijs": "^1.16.1"
   }
 }
