--- a/Pickle.Data/project.json
+++ b/Pickle.Data/project.json
@@ -7,7 +7,8 @@
   "licenseUrl": "",
 
   "dependencies": {
-    "PagedList": "1.17.0"
+    "PagedList": "1.17.0",
+    "AutoMapper": "4.1.1"
   },
 
   "frameworks": {
