--- a/Pickle.Web/project.json
+++ b/Pickle.Web/project.json
@@ -19,7 +19,9 @@
     "Autofac": "4.0.0-beta5-90",
     "Autofac.Framework.DependencyInjection": "4.0.0-beta5-90",
     "Pickle.Data": "1.0.0-*",
-    "Pickle.Data.Mongo": "1.0.0-*"
+    "EntityFramework.SqlServer": "7.0.0-beta5",
+    "Pickle.Data.EntityFramework": "1.0.0-*",
+    "AutoMapper": "4.1.1"
   },
 
   "commands": {
