--- a/Pickle.Api/project.json
+++ b/Pickle.Api/project.json
@@ -3,23 +3,22 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-     "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta5",
-    "Microsoft.AspNet.SignalR.Server": "3.0.0-beta5",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
+    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
     "Microsoft.Owin": "3.0.1",
-    "Microsoft.AspNet.Owin": "1.0.0-beta5",
-    "Microsoft.AspNet.DataProtection": "1.0.0-beta5",
-    "IdentityServer3": "2.0.0-rc2",
-    "Microsoft.AspNet.Authentication.Google": "1.0.0-beta5",
-    "Microsoft.Owin.Security.Google": "3.0.1",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta5",
-    "Microsoft.AspNet.Authentication.OpenIdConnect": "1.0.0-beta5",
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta5"
+    "Microsoft.AspNet.DataProtection": "1.0.0-beta8",
+    "Microsoft.AspNet.Owin": "1.0.0-beta8",
+    "Microsoft.Framework.Logging": "1.0.0-beta8",
+    "IdentityServer3": "2.0.2",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta8",
+    "Microsoft.AspNet.Cors": "6.0.0-beta8",
+    "Microsoft.AspNet.Authentication.Google": "1.0.0-beta8",
+    "Microsoft.Owin.Security.Google": "3.0.1"
   },
 
   "commands": {
-    "web": "Microsoft.AspNet.Hosting --config hosting.ini"
+    "web": "Microsoft.AspNet.Server.Kestrel"
   },
 
   "frameworks": {
