--- a/Pickle.Data.EntityFramework/project.json
+++ b/Pickle.Data.EntityFramework/project.json
@@ -7,9 +7,11 @@
   "licenseUrl": "",
 
   "dependencies": {
+    "EntityFramework.Commands": "7.0.0-beta8",
+    "EntityFramework.Core": "7.0.0-beta8",
+    "EntityFramework.Relational": "7.0.0-beta8",
+    "EntityFramework.SqlServer": "7.0.0-beta8",
     "PagedList": "1.17.0",
-    "EntityFramework.Commands": "7.0.0-beta5",
-    "EntityFramework.SqlServer": "7.0.0-beta5",
     "Pickle.Data": "1.0.0-*"
   },
   "commands": {
