--- a/Pickle.Web/project.json
+++ b/Pickle.Web/project.json
@@ -3,29 +3,24 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta5",
-    "Microsoft.AspNet.SignalR.Server": "3.0.0-beta5",
-    "Microsoft.Owin": "3.0.1",
-    "Microsoft.AspNet.Owin": "1.0.0-beta5",
-    "Microsoft.AspNet.DataProtection": "1.0.0-beta5",
-    "IdentityServer3": "2.0.0-rc2",
-    "Microsoft.AspNet.Authentication.Google": "1.0.0-beta5",
-    "Microsoft.Owin.Security.Google": "3.0.1",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta5",
-    "Microsoft.AspNet.Authentication.OpenIdConnect": "1.0.0-beta5",
-    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta5",
-    "Autofac": "4.0.0-beta5-90",
-    "Autofac.Framework.DependencyInjection": "4.0.0-beta5-90",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
+    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta8",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
+    "Microsoft.AspNet.Authentication.OpenIdConnect": "1.0.0-beta8",
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta8",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta8",
     "Pickle.Data": "1.0.0-*",
-    "EntityFramework.SqlServer": "7.0.0-beta5",
     "Pickle.Data.EntityFramework": "1.0.0-*",
+    "EntityFramework.SqlServer": "7.0.0-beta8",
+    "Autofac": "4.0.0-beta8-157",
+    "Autofac.Framework.DependencyInjection": "4.0.0-beta8-157",
+    "Microsoft.AspNet.SignalR.Server": "3.0.0-beta8-15656",
     "AutoMapper": "4.1.1"
   },
 
   "commands": {
-    "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5001"
+    "web": "Microsoft.AspNet.Server.Kestrel"
   },
 
   "frameworks": {
